--- a/src/Blazor.Server.UI/Pages/Index.razor
+++ b/src/Blazor.Server.UI/Pages/Index.razor
@@ -132,6 +132,8 @@
             </ApexChart>
         </MudItem>
     </MudGrid>
+
+    <IncrementCountComponent></IncrementCountComponent>
 </MudContainer>
 @code {
     [Inject]
