--- a/src/Blazor.Server.UI/Pages/TripReports/TripItem.razor
+++ b/src/Blazor.Server.UI/Pages/TripReports/TripItem.razor
@@ -40,5 +40,5 @@
 @code {
     [Parameter]
     [EditorRequired]
-    public TripReportDto Trip { get; set; } = new();
+    public TripReportToPlainDto Trip { get; set; } = new();
 }
