--- a/src/Blazor.Server.UI/Pages/IncrementCountComponent.razor
+++ b/src/Blazor.Server.UI/Pages/IncrementCountComponent.razor
@@ -1,8 +1,10 @@
 ﻿@using CleanArchitecture.Blazor.Application.Services;
 @using Stl.Fusion.Blazor;
 @using Stl.Fusion.Extensions;
+@using Stl.Fusion.UI;
 @inherits ComputedStateComponent<string>
 @inject CounterService CounterService
+
 @inject IFusionTime Time
 @{
     var state = State.ValueOrDefault;
@@ -21,12 +23,13 @@
     {
         var result = await CounterService.Get(cancellationToken);
         //var momentsAgo = await Time.GetMomentsAgo(changeTime);
+        local += 1;
         return $"{result}";
     }
 
     private async Task Increment()
     {
-        local += 1;
+       
         await CounterService.Increment();
     }
 }
