--- a/src/Blazor.Server.UI/Pages/TripMonitor/DasboardComponent.razor
+++ b/src/Blazor.Server.UI/Pages/TripMonitor/DasboardComponent.razor
@@ -12,6 +12,8 @@
     var state = State.ValueOrDefault;
     var error = State.Error;
 }
+<StateOfStateBadge State="@State" />
+
 @state
 <br>
 @error
